add support for coverage.lcov format

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
+coverage.*
 coverages
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
