--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepify",
-  "version": "3.0.44",
-  "buildDate": "Tue Jul 18 17:42:17 EEST 2017",
+  "version": "3.0.45",
+  "buildDate": "Mon Oct 30 12:46:33 EET 2017",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
