--- a/src/package.json
+++ b/src/package.json
@@ -56,10 +56,9 @@
     "aws-sdk": "^2.39.x",
     "babel-cli": "^6.24.x",
     "babel-preset-node6": "^11.0.x",
-    "babel-preset-es2015": "^6.24.x",
+    "babel-preset-env": "^1.0.0",
     "babel-plugin-transform-es2015-classes": "^6.24.x",
     "babel-plugin-add-module-exports": "^0.2.x",
-    "babel-preset-es2015-node4": "^2.1.x",
     "cli-spinner": "^0.2.x",
     "co": "^4.6.x",
     "es6-promise-pool": "^2.4.x",
