--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepify",
-  "version": "3.0.46",
-  "buildDate": "Wed Nov  1 10:39:15 EET 2017",
+  "version": "3.0.52",
+  "buildDate": "Thu Feb  8 11:35:41 EST 2018",
   "description": "DEEP Development Tools",
   "keywords": [
     "Digital Enterprise End-To-End Platform",
