--- a/src/package.json
+++ b/src/package.json
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/MitocGroup/deepify/issues"
   },
-  "license": "MIT",
+  "license": "MPL-2.0",
   "author": {
     "name": "Mitoc Group",
     "email": "hello@mitocgroup.com",
